k8s/frontend/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-frontend-https
  namespace: frontend
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-www
  namespace: frontend
spec:
  redirectRegex:
    regex: "^https?://www\\.(.*)"
    replacement: "https://${1}"
    permanent: true
