k8s/frontend/ingressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-https
  namespace: frontend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`__FRONTEND_HOST__`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
  tls:
    secretName: myges-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-http
  namespace: frontend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`__FRONTEND_HOST__`)
      kind: Rule
      middlewares:
        - name: redirect-frontend-https
      services:
        - name: frontend
          port: 3000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-www-https
  namespace: frontend
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.__FRONTEND_HOST__`)
      kind: Rule
      middlewares:
        - name: redirect-www
      services:
        - name: frontend
          port: 3000
  tls:
    secretName: myges-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend-www-http
  namespace: frontend
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`www.__FRONTEND_HOST__`)
      kind: Rule
      middlewares:
        - name: redirect-www
      services:
        - name: frontend
          port: 3000
